# ap

./: Cargo.toml  README.md
.ap-actions/: tmux-watch.zsh
src/: config.rs  discover.rs  executor.rs  fzf.rs  lib.rs  logging.rs  main.rs  model.rs  preview.rs  run.rs
tests/dir/.ap-actions/: can-run.toml  link-to-can-not-run
tests/dir/d0/d1/.ap-actions/: ac1.toml
tests/dir/d0/d1/d2/d3/.ap-actions/: ac3.toml
