[package]
edition = "2018"

name = "ap"
author = "mudox <imudox@gmail.com>"
version = "0.1.0"
about = "Action palette"
description = "Action palette"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cli
clap = "3.0.0-beta.2"

# file system
dirs = "3.0.2"
is_executable = "1.0.1"

# log
log = "0.4.14"
pretty_env_logger = "0.4.0"

# config
serde = { version = "1.0.126", features = ["derive"] }
toml = "0.5.8"

# ui
termion = "1.5.6"
termkit =  { path = "../term-kit" }
time = { version = "0.3.0", features = ["formatting"] }

[dev-dependencies]
pretty_assertions = "0.7.2"
