[package]
edition = "2018"
name = "ap"
authors = ["Mudox <imudox@gmail.com>"]
version = "0.3.0"
description = "Action palette"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cli
clap = { version = "3.0.0-rc.11", features = ["cargo"] }

# file system
dirs = "3.0.2"
is_executable = "1.0.1"

# log
log = "0.4.14"
pretty_env_logger = "0.4.0"

# config
serde = { version = "1.0.126", features = ["derive"] }
toml = "0.5.8"

# ui
console = "0.14.1"

time = { version = "0.3.0", features = ["formatting"] }

[dev-dependencies]
pretty_assertions = "0.7.2"
